--- a/css/media.css
+++ b/css/media.css
@@ -113,6 +113,9 @@
 /*Small devices (landscape phones, 576px and up)*/
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .navbar-nav{
+            background: #5D4CFD;
+    }
     .banner_content {
        padding: 92px 0px 0px;
 }
